enable L2 verbosegc while running in normal mode for CreateRescueCandidatesYoungGCTest
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@12035 7fc7bbf3-cf45-46d4-be06-341739edd864